--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 
 /Library/
 
+/Build Versions/
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
